--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "seed": "node seeds/character.seed.js"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
